[package]
name = "predictive_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-parser = "=7.0.17"
async-graphql-derive = "=7.0.17"
linera-sdk = "0.15.5"
linera-views = "0.15.5"
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15.5", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

[[bin]]
name = "predictive_manager_contract"
path = "src/contract.rs"

[[bin]]
name = "predictive_manager_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

# Fuzzing profile (for property-based testing)
[profile.fuzz]
inherits = "dev"
debug = true
opt-level = 1
overflow-checks = true
